--- a/client/style/_helpers.scss
+++ b/client/style/_helpers.scss
@@ -9,13 +9,19 @@ $text: #666666;
 $sepia: #ff905a;
 
 $green: #25b399;
+  $green-high: #53ecce;
 $blue: #50b7e3;
 $yellow: #ffc157;
 $borange: #ff905a;
 
-$break-small: 320px;
-$break-medium: 768px;
-$break-large: 1200px;
+$grey1: #312b2c;
+$grey2: #443f41;
+$grey3: #726d6e;
+$grey4: #e5e1e1;
+
+$break-sm: 320px;
+$break-md: 768px;
+$break-lg: 1200px;
 
 
 /* ==========================================================================
