--- a/client/views/profile/profile_header.html
+++ b/client/views/profile/profile_header.html
@@ -1,6 +1,6 @@
 <template name="profile_header">
   <div class="profile-header">
-    <img class="profile-header-image" src="{{profileImage}}" />
+    <img class="profile-header-img" src="{{profileImage}}" />
     <h1 class="profile-header-title">{{displayName}}</h1>
     <p class="profile-header-subtitle">Besterdayin' since {{memberSince}}</p>
   </div>
