--- a/client/views/profile/profile_stats.html
+++ b/client/views/profile/profile_stats.html
@@ -1,18 +1,22 @@
 <template name="profile_stats">
   <div class="profile-stats">
     <div class="profile-stats-4 completion">
+      <div class="profile-stats-img"></div>
       <p class="profile-stats-num">{{completion}}</p>
       <p class="profile-stats-cap">completion rate</p>
     </div>
     <div class="profile-stats-4 total">
+      <div class="profile-stats-img"></div>
       <p class="profile-stats-num">{{total}}</p>
       <p class="profile-stats-cap">total besterdays</p>
     </div>
     <div class="profile-stats-4 currstreak">
+      <div class="profile-stats-img"></div>
       <p class="profile-stats-num">{{currstreak}}</p>
       <p class="profile-stats-cap">current streak</p>
     </div>
     <div class="profile-stats-4 beststreak">
+      <div class="profile-stats-img"></div>
       <p class="profile-stats-num">{{beststreak}}</p>
       <p class="profile-stats-cap">best streak</p>
     </div>
