--- a/client/style/main.css
+++ b/client/style/main.css
@@ -20,109 +20,6 @@
   font-size: 12px;
   font-family: "ratio"; }
 
-/*** Config ***/
-/* Colors */
-/* used for row 1 & 2 */
-/* used for row 1 & 2 */
-/* Dimensions */
-@-webkit-keyframes border-loading-indicator-row-2 {
-  0% {
-    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); }
-
-  25% {
-    border-color: rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5); }
-
-  50% {
-    border-color: rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25); }
-
-  75% {
-    border-color: rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) rgba(255, 255, 255, 0.75); }
-
-  100% {
-    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); } }
-
-@-ms-keyframes border-loading-indicator-row-2 {
-  0% {
-    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); }
-
-  25% {
-    border-color: rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5); }
-
-  50% {
-    border-color: rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25); }
-
-  75% {
-    border-color: rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) rgba(255, 255, 255, 0.75); }
-
-  100% {
-    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); } }
-
-@-o-keyframes border-loading-indicator-row-2 {
-  0% {
-    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); }
-
-  25% {
-    border-color: rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5); }
-
-  50% {
-    border-color: rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25); }
-
-  75% {
-    border-color: rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) rgba(255, 255, 255, 0.75); }
-
-  100% {
-    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); } }
-
-@-moz-keyframes border-loading-indicator-row-2 {
-  0% {
-    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); }
-
-  25% {
-    border-color: rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5); }
-
-  50% {
-    border-color: rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25); }
-
-  75% {
-    border-color: rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) rgba(255, 255, 255, 0.75); }
-
-  100% {
-    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); } }
-
-@-keyframes border-loading-indicator-row-2 {
-  0% {
-    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); }
-
-  25% {
-    border-color: rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5); }
-
-  50% {
-    border-color: rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25); }
-
-  75% {
-    border-color: rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) rgba(255, 255, 255, 0.75); }
-
-  100% {
-    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); } }
-
-.border-loading-indicator {
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  margin: -10px 0 -10px;
-  border: 0px solid white;
-  border-width: 10px 10px; }
-
-.border-loading-indicator.row-2 {
-  top: 75%;
-  animation: border-loading-indicator-row-2 750ms linear infinite; }
-
-.border-loading-indicator.col-3 {
-  width: 0px;
-  height: 0px;
-  left: 75%;
-  border-radius: 10px 10px 10px 10px; }
-
 /* ==========================================================================
    Global styles
    ========================================================================== */
@@ -136,7 +33,8 @@ body {
   overflow-x: hidden;
   margin: 0;
   padding: 0;
-  background: #fcf9f5; }
+  background: #fcf9f5;
+  color: #312b2c; }
 
 .bg {
   position: absolute;
@@ -148,30 +46,6 @@ body {
   height: 100%; }
   .bg.loading + .bg-loader {
     opacity: 1; }
-
-.bg-loader {
-  -webkit-animation: border-loading-indicator-row-2 750ms linear infinite;
-  -moz-animation: border-loading-indicator-row-2 750ms linear infinite;
-  -ms-animation: border-loading-indicator-row-2 750ms linear infinite;
-  -o-animation: border-loading-indicator-row-2 750ms linear infinite;
-  animation: border-loading-indicator-row-2 750ms linear infinite;
-  -webkit-transition: opacity 0.5s;
-  -moz-transition: opacity 0.5s;
-  -ms-transition: opacity 0.5s;
-  -o-transition: opacity 0.5s;
-  transition: opacity 0.5s;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -50px;
-  margin-left: -50px;
-  width: 0px;
-  height: 0px;
-  border: 0px solid white;
-  border-width: 50px 50px;
-  border-radius: 50px 50px 50px 50px;
-  content: "";
-  opacity: 0; }
 
 .bg-image {
   /* Positioning */
@@ -284,6 +158,139 @@ body {
     display: block;
     width: 50%;
     float: left; }
+
+/* ==========================================================================
+   Text styles
+   ========================================================================== */
+/* ==========================================================================
+   Loader styles
+   ========================================================================== */
+/*** Config ***/
+/* Colors */
+/* used for row 1 & 2 */
+/* used for row 1 & 2 */
+/* Dimensions */
+@-webkit-keyframes border-loading-indicator-row-2 {
+  0% {
+    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); }
+
+  25% {
+    border-color: rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5); }
+
+  50% {
+    border-color: rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25); }
+
+  75% {
+    border-color: rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) rgba(255, 255, 255, 0.75); }
+
+  100% {
+    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); } }
+
+@-ms-keyframes border-loading-indicator-row-2 {
+  0% {
+    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); }
+
+  25% {
+    border-color: rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5); }
+
+  50% {
+    border-color: rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25); }
+
+  75% {
+    border-color: rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) rgba(255, 255, 255, 0.75); }
+
+  100% {
+    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); } }
+
+@-o-keyframes border-loading-indicator-row-2 {
+  0% {
+    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); }
+
+  25% {
+    border-color: rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5); }
+
+  50% {
+    border-color: rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25); }
+
+  75% {
+    border-color: rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) rgba(255, 255, 255, 0.75); }
+
+  100% {
+    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); } }
+
+@-moz-keyframes border-loading-indicator-row-2 {
+  0% {
+    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); }
+
+  25% {
+    border-color: rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5); }
+
+  50% {
+    border-color: rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25); }
+
+  75% {
+    border-color: rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) rgba(255, 255, 255, 0.75); }
+
+  100% {
+    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); } }
+
+@-keyframes border-loading-indicator-row-2 {
+  0% {
+    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); }
+
+  25% {
+    border-color: rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5); }
+
+  50% {
+    border-color: rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) white rgba(255, 255, 255, 0.25); }
+
+  75% {
+    border-color: rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75) rgba(255, 255, 255, 0.75); }
+
+  100% {
+    border-color: white rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.75); } }
+
+.border-loading-indicator {
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  margin: -10px 0 -10px;
+  border: 0px solid white;
+  border-width: 10px 10px; }
+
+.border-loading-indicator.row-2 {
+  top: 75%;
+  animation: border-loading-indicator-row-2 750ms linear infinite; }
+
+.border-loading-indicator.col-3 {
+  width: 0px;
+  height: 0px;
+  left: 75%;
+  border-radius: 10px 10px 10px 10px; }
+
+.bg-loader {
+  -webkit-animation: border-loading-indicator-row-2 750ms linear infinite;
+  -moz-animation: border-loading-indicator-row-2 750ms linear infinite;
+  -ms-animation: border-loading-indicator-row-2 750ms linear infinite;
+  -o-animation: border-loading-indicator-row-2 750ms linear infinite;
+  animation: border-loading-indicator-row-2 750ms linear infinite;
+  -webkit-transition: opacity 0.5s;
+  -moz-transition: opacity 0.5s;
+  -ms-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -50px;
+  width: 0px;
+  height: 0px;
+  border: 0px solid white;
+  border-width: 50px 50px;
+  border-radius: 50px 50px 50px 50px;
+  content: "";
+  opacity: 0; }
 
 .landing-hero {
   -webkit-box-sizing: border-box;
@@ -1214,6 +1221,214 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
 /* ==========================================================================
    Profile
    ========================================================================== */
+#profile {
+  background: #ffffff; }
+
+.profile-header {
+  width: 100%;
+  background: #312b2c;
+  color: #ffffff;
+  text-align: center;
+  padding: 40px 0; }
+
+.profile-header-img {
+  width: 120px;
+  height: 120px;
+  border-radius: 60px; }
+
+.profile-header-title {
+  font-family: "ratio";
+  font-weight: 100;
+  font-size: 42px;
+  margin: 1em 0 8px 0; }
+
+.profile-header-subtitle {
+  font-family: "rooney-web";
+  font-weight: 400;
+  font-size: 14px;
+  margin: 0 0 1em 0;
+  color: #726d6e; }
+
+.profile-stats {
+  width: 100%;
+  overflow: hidden; }
+
+.profile-stats-4 {
+  display: block;
+  float: left;
+  width: 24.9%;
+  height: 180px; }
+  @media screen and (max-width: 768px) {
+    .profile-stats-4 {
+      width: 49.8%;
+      height: 120px; }
+      .profile-stats-4 .profile-stats-img {
+        margin: 20px 0; }
+      .profile-stats-4 .profile-stats-num {
+        margin: 35px 0 0 0; } }
+
+.profile-stats-img {
+  border-left: #e5e1e1 1px solid;
+  margin: 50px 0;
+  padding-left: 10%;
+  width: 30%;
+  float: left;
+  height: 80px; }
+
+.profile-stats-num {
+  font-family: "ratio";
+  font-weight: 100;
+  font-size: 42px;
+  margin: 60px 0 0 0;
+  color: #312b2c; }
+
+.profile-stats-cap {
+  font-family: "rooney-web";
+  font-weight: 400;
+  font-size: 14px;
+  margin: 1em 0;
+  color: #e5e1e1;
+  font-size: 12px; }
+
+.profile-grid {
+  width: 100%;
+  /* Prevent vertical gaps */
+  overflow: hidden;
+  background: #312b2c; }
+
+.profile-grid-stories {
+  position: relative;
+  display: block;
+  float: left;
+  overflow: hidden;
+  width: 24.9%;
+  height: 180px;
+  background: #ffffff;
+  text-align: center;
+  line-height: normal;
+  cursor: pointer; }
+  .profile-grid-stories:before {
+    right: -1em;
+    display: inline-block;
+    height: 100%;
+    content: '';
+    vertical-align: middle; }
+  @media screen and (max-width: 768px) {
+    .profile-grid-stories {
+      width: 49.8%; } }
+  @media screen and (max-width: 320px) {
+    .profile-grid-stories {
+      width: 100%; }
+      .profile-grid-stories.wide {
+        width: 100%;
+        height: 180px; } }
+  @media screen and (min-width: 1200px) {
+    .profile-grid-stories {
+      height: 270px; }
+      .profile-grid-stories.wide {
+        height: 540px; } }
+  .profile-grid-stories.alt-1 {
+    background: #ff905a;
+    color: #ffffff; }
+  .profile-grid-stories.alt-2 {
+    background: #e5e1e1; }
+  .profile-grid-stories.alt-3 {
+    background: #ffffff; }
+  .profile-grid-stories.alt-4 {
+    background: #443f41;
+    color: #ffffff; }
+  .profile-grid-stories.alt-5 {
+    background: #25b399;
+    color: #53ecce; }
+  .profile-grid-stories.large {
+    height: 360px; }
+  .profile-grid-stories.wide {
+    width: 49.8%;
+    height: 360px; }
+    .profile-grid-stories.wide .profile-grid-stories-story {
+      font-size: 32px;
+      padding: 100px 40px; }
+  .profile-grid-stories.img {
+    color: #ffffff; }
+  .profile-grid-stories:hover .profile-grid-stories-story {
+    color: #ffffff; }
+  .profile-grid-stories:hover .profile-grid-stories-date {
+    opacity: 1;
+    top: 50%; }
+  .profile-grid-stories:hover::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 0;
+    background-color: #ffc157;
+    content: "";
+    opacity: .85; }
+
+.profile-grid-stories-img {
+  position: absolute;
+  left: -5px;
+  top: -5px;
+  right: -5px;
+  bottom: -5px;
+  z-index: 0;
+  -webkit-filter: blur(5px); }
+  .profile-grid-stories-img img {
+    height: 100%;
+    width: 100%; }
+
+.profile-grid-stories-story {
+  position: relative;
+  z-index: 2;
+  display: inline-block;
+  overflow: hidden;
+  width: 80%;
+  line-height: 1.2em;
+  text-overflow: ellipsis;
+  max-height: 4.9em;
+  vertical-align: middle;
+  text-align: center;
+  font-weight: 100;
+  font-size: 24px;
+  font-family: "ratio"; }
+
+.profile-grid-stories-date {
+  position: absolute;
+  z-index: 2;
+  display: block;
+  width: 100px;
+  height: 100px;
+  background: url(/img/calendar.svg);
+  left: 50%;
+  top: 52%;
+  margin: -50px 0 0 -50px;
+  opacity: 0;
+  -webkit-transition: top 0.3s;
+  -moz-transition: top 0.3s;
+  -ms-transition: top 0.3s;
+  -o-transition: top 0.3s;
+  transition: top 0.3s; }
+
+.profile-grid-stories-date-month {
+  font-family: "futura-pt",Arial;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 16px;
+  letter-spacing: 2px;
+  color: #ffc157;
+  margin: 20px 0 0 0; }
+
+.profile-grid-stories-date-date {
+  font-family: "futura-pt",Arial;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 16px;
+  letter-spacing: 2px;
+  color: #726d6e;
+  margin: 0;
+  font-size: 32px; }
+
 /* ==========================================================================
    Filepicker
    ========================================================================== */
